@@ -14,7 +14,7 @@
 /*  along with SCIP; see the file COPYING. If not email to scip@zib.de.      */
 /*                                                                           */
 /* * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * */
-#pragma ident "@(#) $Id: sepa.c,v 1.54 2006/09/15 03:14:21 bzfpfend Exp $"
+#pragma ident "@(#) $Id: sepa.c,v 1.55 2006/09/15 03:32:20 bzfpfend Exp $"
 
 /**@file   sepa.c
  * @brief  methods and datastructures for separators
@@ -534,6 +534,16 @@ int SCIPsepaGetFreq(
    assert(sepa != NULL);
 
    return sepa->freq;
+}
+
+/** get maximal bound distance at which the separator is called */
+SCIP_Real SCIPsepaGetMaxbounddist(
+   SCIP_SEPA*            sepa                /**< separator */
+   )
+{
+   assert(sepa != NULL);
+
+   return sepa->maxbounddist;
 }
 
 /** gets time in seconds used in this separator */
